# mq4hemc

./: Makefile  README.md  pyproject.toml  pyproject.toml.in  setup.cfg  setup.py  setup.txt  setup_git.txt  with_toml.txt
scripts/: generate-pyproject.py
src/mq4hemc/: __init__.py  hemc_observer.py  hemc_queue.py
tests/: test_mq4hemc.py  test_observer.py  test_readme.py  test_real_use.py
