[project]
name = "mq4hemc"
version = "0.0.1"
authors = [
  { name="Oleksandr Shevchenko", email="shevchenko.adb@gmail.com" },
]
description = "Message Queue related Python library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/oshevchenko/mq4hemc"
Issues = "https://github.com/oshevchenko/mq4hemc"
